# ChatTube-Know-about-your-video

./: .gitignore  README.md  SETUP.md  experiment.ipynb  pyproject.toml  requirements.txt  run_server.py
app/: __init__.py  main.py  models.py  rag_service.py
