[project]
name = "chattube-know-about-your-video"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "faiss-cpu>=1.12.0",
    "fastapi>=0.116.1",
    "from-root>=1.3.0",
    "ipykernel>=6.30.1",
    "langchain-community>=0.3.27",
    "langchain-openai>=0.3.30",
    "pydantic>=2.11.7",
    "python-dotenv>=1.1.1",
    "tiktoken>=0.11.0",
    "uvicorn[standard]>=0.35.0",
    "youtube-transcript-api>=1.2.2",
]
